// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography.H4 should render default markup when no props are passed 1`] = `
<h4
  className="h4 h4--regular h4--onyx-base dALtsV"
>
  Hello world
</h4>
`;

exports[`Typography.H4 should render with a custom color prop that lacks variants 1`] = `
<h4
  className="h4 h4--regular drypRh"
  color="brand"
>
  Hello world
</h4>
`;

exports[`Typography.H4 should render with a custom weight prop 1`] = `
<h4
  className="h4 h4--semiBold h4--onyx-base hQVXtu"
>
  Hello world
</h4>
`;

exports[`Typography.H4 should render with custom color and variant props 1`] = `
<h4
  className="h4 h4--regular h4--accent01-dark dvjwFa"
  color="accent01"
>
  Hello world
</h4>
`;

exports[`Typography.H4 should render without children 1`] = `
<h4
  className="h4 h4--regular h4--onyx-base dALtsV"
/>
`;
